
syntax = "proto3";
import "google/protobuf/empty.proto";
package reader;



message ServiceGrpcModel {
    string Id = 1;
    int64 Avg = 2;
}

message GetByAppRequest{
    string AppId = 1;
}

message TagGrpcModel{
    string Key = 1;
    string Value =2;
}

message AppActionGrpcModel {
    string Data  = 1;
    int64 Min = 2;
    int64 Avg = 3;
    int64 Max = 4;
    int64 Success = 5;
    int64 Error = 6;
    int64 Total = 7;

}

message GetAppEventsByActionRequest{
    string AppId = 1;
    string Data = 2;
}

message AppDataGrpcModel {
    int64 ProcessId  = 1;
    int64 Started  = 2;
    int64 Duration  = 3;
    optional string Success  = 4;
    optional string Fail  = 5;
    repeated TagGrpcModel Tags  = 6;
}

message GetByProcessIdRequest{
    int64 ProcessId = 1;
}

message MetricEventGrpcModel{
    int64 Started = 1;
    int64 Duration = 2;
    string Name = 3;
    string Data = 4;
    optional string Success = 5;
    optional string Fail = 6;
    repeated TagGrpcModel Tags  = 7;
}

service TelemetryReader {
    rpc GetApps(google.protobuf.Empty) returns (stream ServiceGrpcModel);
    rpc GetAppActions(GetByAppRequest) returns (stream AppActionGrpcModel);
    rpc GetAppEventsByAction(GetAppEventsByActionRequest) returns (stream AppDataGrpcModel);
    rpc GetByProcessId(GetByProcessIdRequest) returns (stream MetricEventGrpcModel);
    rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);

 }